# lmstudio-bridge-enhanced

./: .gitignore  .mcp-server-wrapper.sh  .mcp.json.example  .pre-commit-config.yaml  ACTUAL_CODE_STRUCTURE.md  API_INTEGRATION_INVESTIGATION_REPORT.md  AUTONOMOUS_FUNCTION_TEST_RESULTS.md  AUTONOMOUS_MCP_CAPABILITIES.md  AUTONOMOUS_TOOLS_GUIDE.md  CODE_FIX_PLAN.md  CODE_REVIEW_COMPLETED.md  CODE_REVIEW_CONSOLIDATED.md  CODE_REVIEW_ROUND_1.md  CODE_REVIEW_ROUND_2.md  COMMITS_SUMMARY.md  COMMIT_HISTORY_NOVEMBER_2_2025.md  COMMIT_SUMMARY.md  COMPLETE_HONEST_STATUS.md  COMPLETE_OPTIMIZATION_JOURNEY.md  COMPLETE_TEST_RESULTS_ALL_16_FEATURES.md  COMPREHENSIVE_API_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_MODEL_TESTING.md  COMPREHENSIVE_TEST_INVENTORY.md  COMPREHENSIVE_TEST_PLAN.md  COMPREHENSIVE_TEST_RESULTS_FINAL.md  COMPREHENSIVE_TEST_RESULTS_NOVEMBER_2_2025.md  COMPREHENSIVE_TEST_STRATEGY.md  COMPREHENSIVE_TEST_SUMMARY.md  COMPREHENSIVE_TEST_VERIFICATION_RESULTS.md  CONSOLIDATED_FINAL_IMPLEMENTATION_DECISION.md  CONSOLIDATION_MASTER_PLAN.md  CONSOLIDATION_PLANNING_COMPLETE.md  CONSOLIDATION_TODO.md  CONSTANTS_DOCUMENTATION.md  CONTRIBUTING.md  CORRECTED_V1_VS_V2_SECURITY_ANALYSIS.md  CRITICAL_BUG_IDLE_STATE.md  CRITICAL_FINDINGS_ROOT_CAUSE.md  CURRENT_TEST_STATUS.md  DEEP_ARCHITECTURE_ANALYSIS.md  (+230 more)
config/: __init__.py  constants.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  MODEL_SELECTION_GUIDE.md  MULTI_MODEL_GUIDE.md  QUICKSTART.md  TROUBLESHOOTING.md
examples/: llm_client_example.py
llm/: __init__.py  exceptions.py  llm_client.py  message_manager.py  model_validator.py
mcp_client/: __init__.py  connection.py  discovery.py  executor.py  health_check_decorator.py  persistent_session.py  roots_manager.py  tool_discovery.py  type_coercion.py
model_registry/: __init__.py  cache.py  lms_integration.py  registry.py  research.py  schemas.py  tools.py
scripts/: benchmark_hot_reload.py  extensive_real_testing.py  run_full_test_suite.py
tests/: benchmark_multi_model.py  conftest.py  test_config_validation.py  test_constants.py  test_e2e_multi_model.py  test_error_handling.py  test_exceptions.py  (+14 more)
(+43 files in other folders)
